# FORAL-HRE

./: .env.example  .gitignore  README.md  cloudbuild.yaml  package.json  pyproject.toml
infra/: bootstrap-gcp.sh  create-k6-job.sh  deploy-k6-service.sh  deploy-playwright.sh  k6-cloud-run-job.yaml  runbook-a6.md  verify-prereqs.sh
services/k6-mcp/: .dockerignore  Dockerfile  Dockerfile.job  start.sh
services/k6-mcp/app/: __init__.py  auth.py  config.py  k6_runner.py  main.py
services/k6-mcp/scripts/: job-script.js
services/k6-mcp/tests/: test_auth.py  test_config.py  test_health.py
services/playwright-mcp/: .dockerignore  Dockerfile  package.json  start.sh
services/playwright-mcp/src/: auth.js  config.js  index.js
services/playwright-mcp/test/: auth.test.js  config.test.js  health.test.js
